2015-10-19  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:
	0030 complete gradcheck, predict in addition to train/test for models other than fnn
	0050 saman: local contrast normalization, manual weight bug.
	0100 ai-mtg: Onur and Ozan's bidirectional model.
	0102 yonatan supertagging
	0103 vivi concatenation
	0105 ashish nce model
	0106 karpathy character based models, inputless networks with random generators
	0110 handout-mtg Also conv/pool/rnd/con in the handout have not yet been implemented.
	0110 need train/test switch for nce and dropout.
	0110 src/net.jl: handle con and rnd in tosave.
	0110 src/op/drop.jl: implement rnd.  implement dropout using rnd and mul.
	0120 need something for turkish translation to report to tubitak
	0124 attention s2s model
	0125 ntm
	0126 ctc apply speech model to mt
	0127 image captioning example
	0130 language learning in minecraft
	0160 learning to interpret python ,mfind other examples
	0200 figure out the difference between copyseq and barret.
	0200 barret optimization: for sparse input, keep dw dense, but use a mask to make w += dw faster.
	0200 examples/rnnlm.jl: BUG: start does not handle dense arrays. ArgParse does not handle Real.
	0200 mul2: can probably be implemented using blas sbmv with diagonal m.  (else change order to x1,x2,y)
	0200 optimization: gemm can do incremental updates: pass incr back to ops instead of creating tmp.
	0250 implement gru using con. or axpb?
	0250 src/model/s2s.jl: implement gcheck.
	0300 dynamisarrays add gpu conditionals and cpu only tests, sparse?; should turn constructors into convert.
	0300 package KUdense as DynamicArrays.jl and post it.
	0350 write mikolov ptb downloader like mnist. maybe use github lfs?
	0700 examples/mnist4d.jl (lemlp): TODO: debug softloss carefully, mlp diff has grown.  Debug/implement other losses.